# OpenSpace-Video-Creator

./: .gitattributes  README.md  package-lock.json  package.json
OSVC_installer/: README.md  RUN_AS_ADMIN.bat  build_and_package_installer.ps1  package_installer.ps1
misc/: .gitignore  icon.psd  outro.aep
src/: animal-names.json  helper-functions.js  index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
