[package]
name = "openspace_video_creator"
version = "1.2.0"
description = "Video Creation Tool - To be used at Visualiseringscenter C"
authors = ["Adam Rohdin @ OpenSpace"]
license = "© Visualiseringscenter C"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-all", "fs-read-dir", "notification-all", "path-all", "protocol-asset", "shell-open", "window-all", "windows7-compat"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
